# blockparty

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  SUPPORTED_CHAINS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  configuration.rst  index.rst  pool.rst  providers.rst  ratelimits.rst  registry.rst  requirements.txt  urls.rst
src/blockparty/: __init__.py  _types.py  exceptions.py  warnings.py
src/blockparty/backends/: __init__.py  _base.py  _errors.py  blockscout.py  etherscan.py  routescan.py
src/blockparty/client/: __init__.py  _base.py  _endpoints.py  _middleware.py  _params.py  _transport.py  async_client.py  sync_client.py
src/blockparty/models/: __init__.py  registry.py  responses.py
src/blockparty/pool/: __init__.py  _base.py  async_pool.py  sync_pool.py
src/blockparty/ratelimit/: __init__.py  budget.py  registry.py  tiers.py
src/blockparty/registry/: __init__.py  chain_registry.py  generate.py  sources.py
src/blockparty/registry/data/: chains.json
src/blockparty/urls/: __init__.py  builder.py
tests/: conftest.py  test_async_client.py  test_backends.py  test_client_endpoints.py  test_exceptions.py  test_middleware.py  test_models.py  test_pool_base.py  test_ratelimit.py  test_registry.py  test_sync_client.py  test_transport.py  test_types.py  test_urls.py
