[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockparty"
version = "0.6.0"
description = "Unified Python client for Etherscan, Routescan and Blockscout EVM block explorer APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "DefiDebauchery" }]
keywords = [
    "ethereum", "etherscan", "routescan", "blockscout",
    "blockchain", "evm", "web3", "block-explorer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic >=2.12",
    "aiohttp >=3.9",
    "requests >=2.31",
]

[project.optional-dependencies]
httpx = ["httpx >=0.27"]

[dependency-groups]
dev = [
    "pytest >=8",
    "pytest-asyncio >=0.24",
    "pytest-httpx >=0.36",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/DefiDebauchery/blockparty"
Documentation = "https://blockparty.readthedocs.io/en/latest/"
Issues = "https://github.com/DefiDebauchery/blockparty/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/blockparty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["blockparty"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
